fix: add missing CSS variables for margin and gap in _variables.scss

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -26,4 +26,10 @@
     --main-container-width: 1676px;
 
     --base-font-size: 20px;
+
+    --margin-bottom: 64px;
+    --margin-bottom-s: calc(var(--margin-bottom)/2);
+    --margin-bottom-l: calc(var(--margin-bottom)*2);
+
+    --gap: 16px
 }
